# SMTA

./: README.md  filelist  license.txt  versionfile
lin_x64/: StreamingMediaTranscoder
sources/: CMakeLists.txt  Makefile  README.SMTA
sources/CMake/: FindFunctions.cmake  FindGlobals.cmake  FindMFX.cmake
sources/app/: CMakeLists.txt  Makefile  common.mk
sources/app/msdk_smta/: BitstreamSink.h  BitstreamSource.h  CMakeLists.txt  FFmpegBitstream.cpp  FFmpegBitstream.h  FFmpegReader.cpp  FFmpegReader.h  FFmpegWriter.cpp  FFmpegWriter.h  InputParams.h  Launcher.cpp  Launcher.h  LogPrintThread.cpp  LogPrintThread.h  Makefile  SinkWrap.cpp  SinkWrap.h  bitstream_mgr.cpp  bitstream_mgr.hpp  cmdProcessor.cpp  cmdProcessor.h  common_defs.h  common_unix.h  debug_stream.h  ffmpeg_utils.cpp  ffmpeg_utils.h  log_flags.h  main.cpp  sample_defs.h  sample_fei_defs.h  sample_utils.cpp  sample_utils.h
sources/imports/: Makefile
sources/imports/ffmpeg/: Makefile
sources/libxcode/: CMakeLists.txt  Makefile  common.mk
sources/libxcode/base/: CMakeLists.txt  Makefile  app_def.h  app_trace.h  app_util.cpp  app_util.h  base_element.cpp  base_element.h  debug_info.cpp  debug_info.h  dispatcher.cpp  dispatcher.h  fast_copy.cpp  fast_copy.h  log_function.cpp  log_function.h  logger.h  measurement.cpp  measurement.h  media_common.h  media_pad.cpp  media_pad.h  media_types.h  mem_pool.cpp  mem_pool.h  mutex_locker.h  partially_linear_bitrate.cpp  partially_linear_bitrate.h  ring_buffer.h  stream.cpp  stream.h  trace.cpp  trace.h  trace_base.h  trace_file.cpp  trace_file.h  trace_filter.cpp  trace_filter.h  trace_info.h  trace_pool.cpp  (+1 more)
sources/libxcode/formats/: Makefile  base_demuxer.cpp  base_demuxer.h  mpegts.cpp  mpegts.h
sources/libxcode/os/: CMakeLists.txt  Makefile  XC_Event.cpp  XC_Event.h  XC_Thread.cpp  XC_Thread.h  XC_Time.cpp  XC_Time.h  atomic.cpp  atomic.h  mutex.cpp  mutex.h  platform.h
sources/libxcode/video/: CMakeLists.txt  Makefile  base_allocator.cpp  base_allocator.h  d3d11_allocator.cpp  d3d11_device.cpp  d3d11_device.h  d3d_allocator.cpp  d3d_allocator.h  d3d_device.cpp  d3d_device.h  decoder_element.cpp  decoder_element.h  element_common.cpp  element_common.h  element_factory.cpp  element_factory.h  encoder_element.cpp  encoder_element.h  general_allocator.cpp  general_allocator.h  hevc_encoder_element.cpp  hevc_encoder_element.h  hw_device.h  io_adapter.hpp  msdk_codec.cpp  msdk_codec.h  msdk_xcoder.cpp  msdk_xcoder.h  picture_decode_plugin.cpp  picture_decode_plugin.h  picture_decoder_element.cpp  picture_decoder_element.h  string_decode_plugin.cpp  string_decode_plugin.h  string_decoder_element.cpp  string_decoder_element.h  sysmem_allocator.cpp  sysmem_allocator.h  vaapi_allocator.cpp  (+11 more)
sources/libxcode/video/h264_fei/: encoding_task.h  encoding_task_pool.h  h264_fei_encoder_element.cpp  h264_fei_encoder_element.h  h264_fei_encoder_enc.cpp  h264_fei_encoder_enc.h  h264_fei_encoder_encode.cpp  h264_fei_encoder_encode.h  h264_fei_encoder_pak.cpp  h264_fei_encoder_pak.h  h264_fei_encoder_preenc.cpp  h264_fei_encoder_preenc.h  predictors_repacking.h  refListsManagement_fei.cpp  refListsManagement_fei.h
sources/libxcode/video/h265_fei/: h265_fei_buffer_allocator.cpp  h265_fei_buffer_allocator.h  h265_fei_encoder_element.cpp  h265_fei_encoder_element.h  h265_fei_encoder_encode.cpp  h265_fei_encoder_encode.h  h265_fei_encoder_preenc.cpp  h265_fei_encoder_preenc.h  h265_fei_predictors_repacking.cpp  h265_fei_predictors_repacking.h  h265_fei_utils.cpp  h265_fei_utils.h  ref_list_manager.cpp  ref_list_manager.h  sample_hevc_fei_defs.h
